guardo por las dudas, no se que hice

--- a/RUN/Bruno/prueba.ipynb
+++ b/RUN/Bruno/prueba.ipynb
@@ -123,8 +123,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "ff54b329",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3, 10],\n",
+       "       [ 3, 10]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_channels=3\n",
+    "P0=10\n",
+    "n_APs=2\n",
+    "high=np.array([[num_channels, P0]] * n_APs)\n",
+    "high"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a54814f8",
    "metadata": {},
    "outputs": [],
    "source": []
