get channel matrix completo (creo). Faltaria adaptar nuevo get rates para funcionar sin batches por ahora y verificar si el update mu es el mismo que el del chino. Luego, crear el tain bien.

--- a/RUN/Bruno/Pruebas/prueba_iterador.ipynb
+++ b/RUN/Bruno/Pruebas/prueba_iterador.ipynb
@@ -5,7 +5,7 @@
    "id": "baa51c7a",
    "metadata": {},
    "source": [
-    "Éste notebook es para probar como funciona un iterador externo cuando se lo llama desde una clase. La idea de esto es que varias instancias de una clase puedan ir tomando datos coordinadamente de un iterador sin repetirse.\n",
+    "Este notebook es para probar como funciona un iterador externo cuando se lo llama desde una clase. La idea de esto es que varias instancias de una clase puedan ir tomando datos coordinadamente de un iterador sin repetirse.\n",
     "\n",
     "Esta prueba la hago pensando en dos cosas:\n",
     "1) Ver como pasarle una H por paso a nuestro env.\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d7ca1dc3",
    "metadata": {},
    "outputs": [],
@@ -34,20 +34,66 @@
     "            self.H = None\n",
     "            print(f\"{self.name}: iterador agotado\")\n",
     "        return self.H\n",
+    "    \n",
     "\n",
     "    def step(self):\n",
     "        H = self._get_H()\n",
     "        print(f\"{self.name} obtiene H = {H}\")\n",
-    "        return H"
+    "        return H\n",
+    "    \n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c49a1187",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env1 obtiene H = 10\n",
+      "env2 obtiene H = 20\n",
+      "env1 obtiene H = 30\n",
+      "env2 obtiene H = 40\n",
+      "env1 obtiene H = 50\n",
+      "env2: iterador agotado\n",
+      "env2 obtiene H = None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -----------------------\n",
+    "# Probemos el comportamiento\n",
+    "# -----------------------\n",
+    "H_list = [10, 20, 30, 40, 50]\n",
+    "H_iter = iter(H_list)  # iterador compartido\n",
+    "\n",
+    "# Creamos dos instancias que comparten el iterador\n",
+    "env1 = ToyEnv(H_iterator=H_iter, name=\"env1\")\n",
+    "env2 = ToyEnv(H_iterator=H_iter, name=\"env2\")\n",
+    "\n",
+    "# Llamadas intercaladas\n",
+    "env1.step()  # debería sacar 10\n",
+    "env2.step()  # debería sacar 20\n",
+    "env1.step()  # debería sacar 30\n",
+    "env2.step()  # debería sacar 40\n",
+    "env1.step()  # debería sacar 50\n",
+    "env2.step()  # iterador agotado\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "058f6425",
+   "metadata": {},
+   "source": [
+    "**Conclusión:**\n",
+    "\n",
+    "Parece que funciona como esperaría, por lo que esto se podría utilizar en mi env real. Sería como tener una pila externa a mi env y que se vayan tomando elementos (POP) de ella."
+   ]
   }
  ],
  "metadata": {
@@ -57,7 +103,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
